@startuml mw_log_datarouter_recorder
title mw::log::datarouter::recorder

class DataRouterRecorder {
  - backend_: std::unique_ptr<Backend>
  - config_: Configuration
  - statistics_reporter_: StatisticsReporter
  --
  - LogData(const SlotHandle&, const T data): void
  - SetApplicationId(LogRecord&): void
  + DataRouterRecorder(std::unique_ptr<Backend>&&, const Configuration&)
  + StartRecord(const std::string_view, const LogLevel): amp::optional<SlotHandle>
  + StopRecord(const SlotHandle&): void
  + Log(const SlotHandle&, const T): void
  + IsLogEnabled(const LogLevel&, const std::string_view): bool
}

class "<<Singleton>>\nmw::log::Runtime" as Runtime {
}

class StatisticsReporter {
  - recorder_: Recorder&
  - report_interval_: std::chrono::seconds
  - number_of_slots_: std::size_t
  - slot_size_bytes_: std::size_t
  - no_slot_available_counter_: std::atomic<std::size_t>
  - message_too_long_counter_: std::atomic<std::size_t>
  - last_report_time_point_nanoseconds_: std::atomic<std::int64_t>
  - currently_reporting_: std::atomic_bool
  --
  + StatisticsReporter(Recorder&, const std::chrono::seconds, const std::size_t, const std::size_t)
  + IncrementNoSlotAvailable(): void
  + IncrementMessageTooLong(): void
  + Update(const std::chrono::steady_clock::time_point&): void
}

interface IStatisticsReporter {
  + IncrementNoSlotAvailable(): void
  + IncrementMessageTooLong(): void
  + Update(const std::chrono::steady_clock::time_point&): void
}

class Configuration {
}

class DataRouterBackend {
}

class Recorder {
}

' Relationships
Runtime <-- DataRouterRecorder : "is owned by"
DataRouterRecorder *-- StatisticsReporter
DataRouterRecorder *-- Configuration
DataRouterRecorder *-- DataRouterBackend
StatisticsReporter ..|> IStatisticsReporter
StatisticsReporter --> Recorder : "uses"

@enduml